Closed
Bug 282761
Opened 21 years ago
Closed 21 years ago
compmgr crashes if GetClassObject in a js component returns null
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: vlad, Assigned: benjamin)
Details
(Keywords: crash)
Attachments
(1 file)
|
1.25 KB,
patch
|
vlad
:
review+
dougt
:
superreview+
|
Details | Diff | Splinter Review |
Given a JS component, if GetClassObject from the component's module returns null
(or doesn't return anything at all), we crash in
mozilla/xpcom/components/nsComponentManager.cpp, line 1918 or so. Should
probably put in an assert or some other check to make sure the factory we get
back is non-null.
| Assignee | ||
Updated•21 years ago
|
Assignee: dougt → benjamin
| Assignee | ||
Comment 1•21 years ago
|
||
Attachment #174732 -
Flags: superreview?(dougt)
Attachment #174732 -
Flags: review?(vladimir)
Comment 2•21 years ago
|
||
Comment on attachment 174732 [details] [diff] [review]
Null-check factory results
looks good.
Attachment #174732 -
Flags: superreview?(dougt) → superreview+
| Reporter | ||
Comment 3•21 years ago
|
||
Comment on attachment 174732 [details] [diff] [review]
Null-check factory results
r=vladimir, thanks for jumping on it :)
Attachment #174732 -
Flags: review?(vladimir) → review+
| Assignee | ||
Comment 4•21 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta2
You need to log in
before you can comment on or make changes to this bug.
Description
•