Bug 282761 - crash if getClassObject "succeeds" but returns null r=dougt